# youtube-market-brief

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: ci.yml  digest.yml  pages.yml
config/: channels.yaml  channels.yaml.example  watchlist.yaml.example
docs/adr/: 0001-module-structure.md  0002-idempotency-state.md  0003-claude-overreach-codex-residual-scope.md  0004-codex-implementation-report.md  0005-llm-client-cloud-execution.md  0006-prompt-persona-schema-realignment.md  0007-openai-cloud-llm-and-sidecar-aggregation.md
docs/market-insights/: README.md  index.html
plans/: 2026-05-07-initial-plan.md  2026-05-11-p1-prompt-persona-schema-design.md  2026-05-11-p1-prompt-persona-schema-plan.md  2026-05-11-p3-weekly-rollup-design.md  2026-05-11-p3-weekly-rollup-plan.md
prompts/: system_daily_brief.ko.md  system_video_analysis.ko.md
scripts/: claude_channel_research.py  run_log.json  yt_collector_remote.py
src/youtube_market_brief/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  orchestrator.py
tests/: conftest.py
tests/fakes/: __init__.py  fake_llm.py  fake_telegram.py  fake_transcript.py  fake_youtube.py
tests/integration/: test_transcript_live.py  test_v1_fixture_regression.py  test_youtube_data_live.py
tests/unit/: test_analyze_parser.py  test_claude_channel_research.py  test_cli.py  test_cli_aggregate_only.py  test_cli_weekly.py  test_daily_brief_aggregation.py  test_daily_rollup.py  test_daily_sidecar_loader.py  test_digest_workflow.py  test_discover.py  (+20 more)
(+30 files in other folders)
